--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
+    "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "2.1.5",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-react": "^7.12.4"
+  }
 }
