--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.1.5",
     "redux": "^3.7.2",
