--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-redux-loading": "^1.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
